--- a/amap/src/css/style.css
+++ b/amap/src/css/style.css
@@ -1,3 +1,7 @@
+html {
+    font-size: 1em!important;
+}
+
 .order-enter {
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
@@ -260,7 +264,6 @@ header.top {
   text-align: center;
 }
 header.top h1 {
-  font-size: 14.4rem;
   line-height: 0.7;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -394,7 +397,17 @@ ul.order li span.count span {
 .order-title {
   text-align: center;
 }
+
+.card{
+  display: block!important;
+}
 .veggie-edit {
+  margin-bottom: 20px;
+
+}
+
+
+/*.veggie-edit {
   margin-bottom: 20px;
   border: 2px solid #000;
   overflow: hidden;
@@ -435,7 +448,7 @@ ul.order li span.count span {
 .veggie-edit button {
   width: 100%;
   border: 0;
-}
+}*/
 .list-of-veggie {
   border-top: 2px solid #000;
   border-bottom: 1px solid #000;
@@ -455,7 +468,6 @@ ul.order li span.count span {
 }
 .menu-veggie p {
   margin: 0;
-  font-size: 1.8rem;
 }
 .menu-veggie .veggie-name {
   margin: 0;
@@ -574,5 +586,67 @@ input[type=submit].twitter:after {
 .store-selector input[type="text"],
 .store-selector button[type="text"] {
   text-align: center;
-  font-size: 3rem;
+}
+
+
+input {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+select{
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+        border-top-color: rgb(206, 212, 218);
+        border-right-color: rgb(206, 212, 218);
+        border-bottom-color: rgb(206, 212, 218);
+        border-left-color: rgb(206, 212, 218);
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+    margin: 0;
+  font-family: inherit;
+  font-size: inherit;
+  line-height: inherit;
+}
+
+select:focus {
+    color: #495057;
+    background-color: #fff;
+    border-color: #80bdff;
+    outline: 0;
+    box-shadow: 0 0 0 .2rem rgba(0,123,255,.25);
+}
+
+textarea {
+    display: block;
+    width: 100%;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    color: #495057;
+    background-color: #fff;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+        border-top-color: rgb(206, 212, 218);
+        border-right-color: rgb(206, 212, 218);
+        border-bottom-color: rgb(206, 212, 218);
+        border-left-color: rgb(206, 212, 218);
+    border-radius: .25rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
